# repo-launch-doctor

./: .gitignore  .repo-launch-doctor.example.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  run-doctor.bat
.github/workflows/: diagnostic-tests.yml  repo-launch-doctor.yml  tests.yml
audits/current/: README.md  current_audit.py  extended-review.json  manual-review.json  selection.json
audits/current/results/: baseline.json  baseline.md  extended-baseline.json  extended-baseline.md  extended-latest.json  extended-latest.md  latest.json  latest.md
benchmarks/: README.md  label-history.md  manifest.json  run_benchmarks.py
benchmarks/results/: latest.json  latest.md
benchmarks/results/targets/: alangpierce--sucrase.json  cbogdan97--automation_test--4f89826f29b3.json  cbogdan97--automation_test--dab37fe8a924.json  changesets--changesets.json  ckala62rus--go-architecture-v2--2fc3164e0d8c.json  ckala62rus--go-architecture-v2--df7c7b4f0aec.json  cu-ecen-aeld--assignments-3-and-later-jqiaobln--002d42426770.json  electron--simple-samples.json  expressjs--express.json  google--zx.json  pallets--click.json  (+29 more)
docs/: before-after.md  check-reference.md  configuration.md  report-schema.md
docs/adr/: 001-severity-and-incomplete.md  002-secret-filenames.md  003-check-tradeoffs.md
docs/cases/: README.md
repo_launch_doctor/: __init__.py  checks.py  cli.py  config.py  constants.py  history.py  inventory.py  models.py  reporters.py  scanner.py  schema.py
schemas/: report-v1.schema.json
tests/: test_assurance.py  test_benchmarks.py  test_current_audit.py  test_doctor.py  test_history.py  test_scanner_safety.py
(+2 files in other folders)
