[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-launch-doctor"
version = "0.1.0"
description = "Read-only checks for repository launchability and public readiness"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "misaka310" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
repo-launch-doctor = "repo_launch_doctor.cli:main"

[tool.setuptools.packages.find]
include = ["repo_launch_doctor*"]
